# oas2mcp

./: .bandit  .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  README.md  langgraph.json  pyproject.toml  swagger-petstore-openapi-3-0.enhanced.json
.github/workflows/: ci.yml  docs.yml  release.yml
.trunk/: trunk.yaml
config/: langgraph.json
data/exports/: swagger-petstore-openapi-3-0_fastmcp_config.json  swagger-petstore-openapi-3-0_operation_notes.json
docs/: TODO.md
docs/source/: architecture.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/source/_static/: custom_css.css
scripts/: release_cut.py  release_version.py  test_catalog_summarizer_agent.py  test_catalog_surface_planner_agent.py  test_classification.py  test_fastmcp_bootstrap.py  test_fastmcp_client.py  test_fastmcp_server.py  test_openapi.py  test_operation_candidate.py  test_operation_enhancer_agent.py  test_operation_enhancer_context.py  test_orchestrator.py  test_summary_context.py
src/oas2mcp/: __init__.py  _release.py
src/oas2mcp/agent/: __init__.py  base.py  orchestrator.py  runtime.py  state.py
src/oas2mcp/agent/enhancer/: __init__.py  agent.py  context.py  models.py  prompts.py  tools.py
src/oas2mcp/agent/middleware/: __init__.py  context.py  tools.py
src/oas2mcp/agent/summarizer/: __init__.py  agent.py  context.py  models.py  prompts.py
src/oas2mcp/agent/surface/: __init__.py  agent.py  context.py  models.py  prompts.py
src/oas2mcp/classify/: __init__.py  operations.py
src/oas2mcp/deploy/: __init__.py  langgraph_app.py
src/oas2mcp/generate/: __init__.py  config.py  export.py  fastmcp_app.py  models.py  surface_defaults.py
src/oas2mcp/loaders/: __init__.py  openapi.py
src/oas2mcp/models/: __init__.py  mcp.py  normalized.py
src/oas2mcp/normalize/: __init__.py  spec_to_catalog.py
src/oas2mcp/utils/: __init__.py  lookup.py  names.py  refs.py
src/oas2mcp/viewers/: __init__.py  classification.py  summary.py
tests/: conftest.py  test_classification_and_context.py  test_export.py  test_fastmcp_helpers.py  test_langgraph_deploy.py  test_loaders.py  test_lookup_and_refs.py  test_orchestrator.py  test_prompts.py  test_public_exports.py  test_release_helpers.py  test_surface_planner.py
tests/e2e/: test_fastmcp.py
