[project]
name = "oas2mcp"
version = "0.1.1"
description = "Turn OpenAPI specs into MCP-friendly catalogs, exports, and FastMCP bootstrap artifacts."
authors = [{ name = "Will" }]
dependencies = [
  "pydantic<3,>=2.12",
  "rich<16,>=15",
  "langchain-community>=0.4.1",
  "langchain>=1.2.15",
  "langchain-core>=1.2.30",
  "langgraph>=1.1.6",
  "langgraph-sdk>=0.3.13",
  "langchain-openai>=1.1.13",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
  "fastmcp>=3.2.4",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = ["openapi", "mcp", "fastmcp", "api", "codegen"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/pr1m8/oas2mcp"
Repository = "https://github.com/pr1m8/oas2mcp"
Documentation = "https://oas2mcp.readthedocs.io/en/latest/"
Issues = "https://github.com/pr1m8/oas2mcp/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = ["pytest<10,>=9"]
lint = ["ruff>=0.11", "mypy>=1.15"]
cli = ["typer<0.25,>=0.24"]
config = ["pydantic-settings<3,>=2.13"]
docs = [
  "sphinx>=9.1.0",
  "furo>=2025.12.19",
  "sphinx-autobuild>=2025.8.25",
  "myst-parser>=5.0.0",
  "myst-nb>=1.4.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-autodoc-typehints>=3.10.2",
  "autodoc-pydantic>=2.2.0",
  "sphinx-autoapi>=3.8.0",
  "sphinxext-opengraph>=0.13.0",
  "sphinx-sitemap>=2.9.0",
  "sphinx-notfound-page>=1.1.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx-reredirects>=1.1.0",
  "sphinxcontrib-spelling>=8.0.2",
  "doc8>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
