[project]
name = "oas2mcp"
version = "0.1.3"
description = "Turn OpenAPI specs into MCP-friendly catalogs, exports, and FastMCP bootstrap artifacts."
dependencies = [
  "pydantic<3,>=2.12",
  "rich<16,>=15",
  "langchain-community>=0.4.1",
  "langchain>=1.2.15",
  "langchain-core>=1.2.30",
  "langgraph>=1.1.6",
  "langgraph-sdk>=0.3.13",
  "langsmith>=0.7.32",
  "langchain-openai>=1.1.13",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
  "fastmcp>=3.2.4",
]
requires-python = "==3.13.6"
readme = "README.md"
keywords = ["openapi", "mcp", "fastmcp", "api", "codegen"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[[project.authors]]
name = "Will"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pr1m8/oas2mcp"
Repository = "https://github.com/pr1m8/oas2mcp"
Documentation = "https://oas2mcp.readthedocs.io/en/latest/"
Issues = "https://github.com/pr1m8/oas2mcp/issues"

[project.optional-dependencies]
cli = ["typer<0.25,>=0.24", "langgraph-cli>=0.2.11"]
test = ["pytest<10,>=9"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
