[project]
name = "oas2mcp"
version = "0.1.11"
description = "Agentic OpenAPI-to-MCP pipeline for AI-refined FastMCP and LangGraph server artifacts."
authors = [{ name = "Will" }]
dependencies = [
  "pydantic<3,>=2.12",
  "rich<16,>=15",
  "langchain-community>=0.4.1",
  "langchain>=1.2.15",
  "langchain-core>=1.2.30",
  "langgraph>=1.1.6",
  "langgraph-sdk>=0.3.13",
  "langsmith>=0.7.32",
  "langchain-openai>=1.1.13",
  "python-dotenv>=1.2.2",
  "httpx>=0.28.1",
  "fastmcp>=3.2.4",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
keywords = [
  "openapi",
  "swagger",
  "mcp",
  "model-context-protocol",
  "fastmcp",
  "langgraph",
  "langsmith",
  "agents",
  "llm",
  "api",
  "codegen",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pr1m8/oas2mcp"
Repository = "https://github.com/pr1m8/oas2mcp"
Documentation = "https://oas2mcp.readthedocs.io/en/latest/"
Issues = "https://github.com/pr1m8/oas2mcp/issues"
Changelog = "https://github.com/pr1m8/oas2mcp/releases"
CI = "https://github.com/pr1m8/oas2mcp/actions/workflows/ci.yml"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest"
docs_build = { cmd = "sphinx-build -b html -W --keep-going docs/source docs/_build/html", env = { LANG = "en_US.UTF-8", LC_ALL = "en_US.UTF-8" } }
build_dist = "pdm build"
release_check = { composite = ["test", "docs_build", "build_dist"] }
release_bump_patch = { composite = [
  "python scripts/release_version.py --part patch",
  "pdm lock",
] }
release_bump_minor = { composite = [
  "python scripts/release_version.py --part minor",
  "pdm lock",
] }
release_bump_major = { composite = [
  "python scripts/release_version.py --part major",
  "pdm lock",
] }
release_prepare_patch = { composite = ["release_bump_patch", "release_check"] }
release_prepare_minor = { composite = ["release_bump_minor", "release_check"] }
release_prepare_major = { composite = ["release_bump_major", "release_check"] }
release_cut_patch = "python scripts/release_cut.py --part patch"
release_cut_minor = "python scripts/release_cut.py --part minor"
release_cut_major = "python scripts/release_cut.py --part major"

[dependency-groups]
test = ["pytest<10,>=9"]
lint = ["ruff>=0.11", "mypy>=1.15"]
cli = ["typer<0.25,>=0.24", "langgraph-cli[inmem]>=0.2.11"]
config = ["pydantic-settings<3,>=2.13"]
docs = [
  "sphinx>=9.1.0",
  "furo>=2025.12.19",
  "sphinx-autobuild>=2025.8.25",
  "myst-parser>=5.0.0",
  "myst-nb>=1.4.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "sphinx-togglebutton>=0.4.5",
  "sphinx-inline-tabs>=2025.12.21.14",
  "sphinxcontrib-mermaid>=2.0.1",
  "sphinx-autodoc-typehints>=3.10.2",
  "autodoc-pydantic>=2.2.0",
  "sphinx-autoapi>=3.8.0",
  "sphinxext-opengraph>=0.13.0",
  "sphinx-sitemap>=2.9.0",
  "sphinx-notfound-page>=1.1.0",
  "sphinx-last-updated-by-git>=0.3.8",
  "sphinx-reredirects>=1.1.0",
  "sphinxcontrib-spelling>=8.0.2",
  "doc8>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
